--- a/CSS/blocks/panel/panel.css
+++ b/CSS/blocks/panel/panel.css
@@ -1,28 +1,65 @@
 .panel {
     display: flex;
-    background-color: white;
+    background-color: black;
     justify-content: space-between;
     width: 100%;
+    filter: drop-shadow(0px 5px 5px black);
+  }
+  .panel__logo {
+    align-self: center;
+    margin-left: 10px;
   }
   
   .panel__center {
     display: flex;
     flex-direction: column;
+    width: 100%;
+    max-width: 1000px;
   }
-  
-  .panel__search_field {
+
+
+  .panel__search {
     margin-right: 8px;
   }
-  
+  .panel__search__bar {
+    width: 100%;
+    max-width: 1000px;
+    background: rgba(255, 255, 255, 0.8);
+    display: flex;
+    align-items: center;
+    border-radius: 60px;
+    padding: 10px 20px;
+    margin-top: 10px;
+  }
+  .panel__search__bar__input {
+    background: transparent;
+    flex: 1;
+    border: 0;
+    outline: none;
+    padding: 5px 3px;
+    font-size: 20px;
+
+  }
+  .panel__search__button {
+    background: transparent;
+    border: 0;
+  }
+  .panel__search__button__img {
+    width: 100%;
+    max-width: 30px;
+    height: auto;
+    
+  }
   .panel__navigation__list {
     list-style-type: none;
     display: flex;
+    justify-content: space-between;
   }
   
   .panel__navigation__list__item {
-    margin-right: 10px;
     font-family: 'Times New Roman', Times, serif;
     font-size: 13pt;
+    color: white;
   }
   
   .panel__logo__image {
@@ -30,4 +67,11 @@
       height: auto;
       padding-right: 10px;
     }
-  
+
+  .panel__right {
+    margin-right: 10px;
+    }
+  .panel__right__buttons__img {
+    width: 100%;
+    max-width: 50px;
+  }
