--- a/CSS/blocks/table/table.css
+++ b/CSS/blocks/table/table.css
@@ -1,22 +1,27 @@
 .table {
-    display: grid;
-    margin-top: 10px;
-  }
-  
-  .table_main {
-    width: 100%;
-    border-collapse: collapse;
-  }
-  
-  th, td {
-    padding: 8px;
-    border: 1px solid #ddd;
-  }
-  
-  thead th {
-    background-color: #f2f2f2;
-  }
-  
-  .table_main__body tr:nth-child(even) {
-    background-color: #f9f9f9;
+  display: grid;
+  margin-top: 10px;
+}
+
+.table_main {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th,
+td {
+  padding: 8px;
+  border: 1px solid #ddd;
+}
+
+thead th {
+  background-color: #f2f2f2;
+}
+
+.table__main__body tr:nth-child(even) {
+  background-color: #d89494;
+}
+
+.table__main__body tr:nth-child(odd) {
+    background-color: #7679e0;
   }
