feat!: added lab-5

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -6,3 +6,4 @@
 @import url(blocks/banner/banner.css);
 @import url(common/body.css);
 @import url(blocks/table/table.css);
+@import url(blocks/books_form/books_form.css);
